Added DiscordSRV and added to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ floodgate/
 floodgate-spigot.jar
 worldedit-bukkit-7.2.12.jar
 worldguard-bukkit-7.0.7-dist.jar
+DiscordSRV-Build-1.26.0.jar
+DiscordSRV/
